--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,7 @@
 
     <script src="app.js"></script>
     <script src="controllers/landing.js"></script>
+    <script src="services/apiService.js"></script>
 
 </body>
 </html>
