Add background image to landing page

--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,8 @@
 
     <div ui-view class="main-wrap"></div>
 
+    <div class="bg"></div>
+
     <!-- In production use:
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
     -->
