--- a/app/index.html
+++ b/app/index.html
@@ -47,5 +47,16 @@
     <script src="controllers/landing.js"></script>
     <script src="services/apiService.js"></script>
 
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-12504900-12', 'auto');
+      ga('send', 'pageview');
+
+    </script>
+
 </body>
 </html>
