--- a/app/index.html
+++ b/app/index.html
@@ -27,22 +27,17 @@
     <![endif]-->
 
     <div ui-view class="main-wrap"></div>
-
     <div class="bg"></div>
-
-    <!-- In production use:
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
-    -->
 
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/moment/min/moment.min.js"></script>
     <script src="js/flipclock.js"></script>
 
-    <script src="bower_components/angular/angular.js"></script>
+    <!-- <script src="bower_components/angular/angular.js"></script> -->
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular.min.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 
     
-
     <script src="app.js"></script>
     <script src="controllers/landing.js"></script>
     <script src="services/apiService.js"></script>
