Add OG meta info

--- a/app/index.html
+++ b/app/index.html
@@ -3,13 +3,19 @@
 <!--[if IE 7]>         <html lang="en" ng-app="talviolympick" class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html lang="en" ng-app="talviolympick" class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html lang="en" ng-app="talviolympicksApp" class="no-js"> <!--<![endif]-->
-<head>
+<head  prefix="og: http://ogp.me/ns#">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Talviolympicks</title>
 
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta property="og:description" content="Enemmän, Pidempään, Rumemmin. Since 2008.">
+    <meta property="og:image" content="http://talviolympicks.com/img/logo-full.png">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:width" content="596">
+    <meta property="og:image:height" content="632">
 
     <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
     <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
@@ -50,7 +56,6 @@
 
       ga('create', 'UA-12504900-12', 'auto');
       ga('send', 'pageview');
-
     </script>
 
 </body>
