Add specific image for OG meta

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta property="og:description" content="Enemmän, Pidempään, Rumemmin. Since 2008.">
-    <meta property="og:image" content="http://talviolympicks.com/img/logo-full.png">
+    <meta property="og:image" content="http://talviolympicks.com/img/logo-og.png">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="596">
     <meta property="og:image:height" content="632">
